--- a/src/boilerplate.scss
+++ b/src/boilerplate.scss
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lato&display=swap');
+
 * {
   box-sizing: border-box;
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: 'Lato', sans-serif;
 }
