--- a/src/boilerplate.scss
+++ b/src/boilerplate.scss
@@ -11,3 +11,7 @@ html {
   font-size: 16px;
   font-family: 'Lato', sans-serif;
 }
+
+body {
+  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+}
